[gd_scene load_steps=4 format=3 uid="uid://c4g8pq7xjwj4r"]

[ext_resource type="Script" uid="uid://c8x5h6lam2n4p" path="res://Scripts/UI/Debug/DebugConsole.gd" id="1_hn5yb"]
[ext_resource type="PackedScene" uid="uid://bdcmrcsl10x5g" path="res://Scenes/UI/AutoComplete.tscn" id="2_246ex"]
[ext_resource type="Theme" uid="uid://ccpr45sj16cli" path="res://Assets/FactoryTheme.tres" id="3_theme"]

[node name="DebugConsole" type="CanvasLayer"]
layer = 100
script = ExtResource("1_hn5yb")

[node name="ConsolePanel" type="Panel" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 300.0
grow_horizontal = 2
theme = ExtResource("3_theme")

[node name="VBoxContainer" type="VBoxContainer" parent="ConsolePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="OutputLog" type="RichTextLabel" parent="ConsolePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="InputLine" type="LineEdit" parent="ConsolePanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter command..."
keep_editing_on_text_submit = true
caret_blink = true

[node name="AutoCompleteList" parent="ConsolePanel" instance=ExtResource("2_246ex")]
layout_mode = 0
offset_left = 5.0
offset_top = 300.0
offset_right = 1147.0
offset_bottom = 323.0

[node name="MarginContainer" type="MarginContainer" parent="ConsolePanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="focus_entered" from="ConsolePanel/VBoxContainer/InputLine" to="." method="_on_input_line_focus_entered"]
